# softball-vision

./: .gitignore  AGENTS.md  CLAUDE.md  CODE-REVIEW.md  NEW_GAME_CHECKLIST.md  PROJECT-EXPLANATION.md  README.md  ROLES.md  Roadmap.md  WEB-APP-SHAKEDOWN.md  pyproject.toml  requirements.txt  softball-vision.code-workspace
.github/workflows/: ci.yml  package-macos.yml
docs/: prior-art-loups.md
docs/archive/: CODE-REVIEW.md  README.md  Roadmap.md
examples/: corrections.example.csv  overlay_template.example.json  roster.example.csv  sidelinehd.example.cfg  sidelinehd_640x360_active.example.json  team-list.example.txt
packaging/: build-macos.md  entitlements.plist  sidelinehd.spec  sidelinehd_desktop.py
packaging/icon/: generate_icon.py  make-icns.sh  make_dock_icon.py  sidelinehd.icns
src/sidelinehd_extractor/: __init__.py  batch.py  build_info.py  calibration.py  cli.py  config.py  constants.py  corrections.py  crops.py  desktop.py  events.py  exports.py  feedback.py  models.py  naming.py  ocr.py  preflight.py  processing.py  publish.py  review.py  review_report.py  review_triage.py  roster.py  serialization.py  state.py  template_probe.py  updates.py  video.py  workflow.py  youtube.py
src/sidelinehd_extractor/data/: sidelinehd_640x360_active.json
src/sidelinehd_extractor/webapp/: __init__.py  app.py  history.py  jobs.py  lifecycle.py
src/sidelinehd_extractor/webapp/templates/: _add_event_form.html  _footer.html  _form_error.html  _how_it_works.html  _job_detail_body.html  _job_row.html  _job_status.html  _review_rows.html  feedback.html  game.html  index.html  job_detail.html  results.html  review.html  roster_edit.html  rosters.html
tests/: test_batch.py  test_build_info.py  test_calibration.py  test_cli.py  test_cli_parity.py  test_config.py  test_corrections.py  test_crops.py  test_desktop.py  test_detection_config.py  test_docs.py  test_events.py  test_exports.py  test_feedback.py  test_name_safety.py  test_naming.py  test_ocr.py  test_packaging_entitlements.py  test_packaging_icon.py  test_preflight.py  test_processing.py  test_publish.py  test_review.py  test_review_report.py  test_review_triage.py  test_roster.py  test_state.py  test_template_data.py  test_template_probe.py  test_updates.py  test_video.py  test_webapp.py  test_webapp_history.py  test_webapp_lifecycle.py  test_webapp_rosters.py  test_workflow.py  test_youtube.py
