[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidelinehd-extractor"
version = "0.5.0"
description = "Local SidelineHD overlay OCR and YouTube timestamp exporter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9",
    "yt-dlp>=2025.1",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
ocr = [
    "tesserocr>=2.7",
    "Pillow>=10",
]
# Items 54d + 68b: the macOS Dock-app launcher (python -m
# sidelinehd_extractor.desktop and the PyInstaller .app bundle). Needs the
# web extra too.
desktop = [
    "pyobjc-framework-Cocoa",
]

[project.scripts]
sidelinehd-extractor = "sidelinehd_extractor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
